# realsense_bag_extractor

./: CMakeLists.txt
src/: realsense_bag_extract.cpp
